--- a/src/layouts/rootlayout.scss
+++ b/src/layouts/rootlayout.scss
@@ -1,6 +1,4 @@
-
-.rootlayout-body{
-    min-height: 100vh;
-    
-    // background-color: black;
+.rootlayout-body {
+  min-height: 100vh;
+  margin-left: 15rem;
 }
